k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-class
spec:
  # Controller specific to Envoy Gateway
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: dev
  labels:
    app: api-gateway
  annotations:
    # Explicitly asking the gateway controller to provision a LoadBalancer Service
    gateway.envoyproxy.io/service-type: "LoadBalancer"
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
