k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-routes
  namespace: dev
spec:
  parentRefs:
    - name: api-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
      backendRefs:
        - name: auth-service
          port: 4001

    - matches:
        - path:
            type: PathPrefix
            value: /api/products
      backendRefs:
        - name: product-service
          port: 4002

    - matches:
        - path:
            type: PathPrefix
            value: /api/orders
      backendRefs:
        - name: order-service
          port: 4003

    - matches:
        - path:
            type: PathPrefix
            value: /api/cart
      backendRefs:
        - name: cart-service
          port: 4004

    - matches:
        - path:
            type: PathPrefix
            value: /api/profile
      backendRefs:
        - name: user-profile-service
          port: 4005

    - matches:
        - path:
            type: PathPrefix
            value: /api/notifications
      backendRefs:
        - name: notification-service
          port: 4006

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-service
          port: 3000
